feat: 添加DeepSeek API集成与企业RAG智能问答系统
- 新增DeepSeek API客户端封装 (api_client.py)
- 实现基于ChromaDB的RAG检索增强系统 (rag_system.py)
- 添加真实企业员工手册作为知识库 (公司制度.txt)
- 包含完整的软件测试用例与文档
- 支持交互式问答演示 (demo_chat.py)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# 环境变量文件（包含API密钥等敏感信息）
+.env
+*.env
+
 # 虚拟环境
 venv_d/
 venv/
@@ -16,6 +20,8 @@ catgirl/catgirl_model/
 
 # 数据库文件
 chroma_db/
+deepseek_integration/chroma_db/
+deepseek_integration/test_chroma_db/
 *.sqlite3
 
 # 模型权重文件
